feat: add NX_DAEMON and CI_CACHE_VERSION to CircleCI terraform configuration
- Add NX_DAEMON and CI_CACHE_VERSION to CircleCI environment variables
- Create shared vars-nx.tf for NX-related variables
- Update CI environment to use shared NX variables
- Refactor terraform apply to only use consul for prod stage

--- a/.circleci/config/commands/restore-nx-cache.yml
+++ b/.circleci/config/commands/restore-nx-cache.yml
@@ -7,6 +7,6 @@ steps:
   - restore_cache:
       name: 'Restore Nx << parameters.cache_name >> Cache'
       keys:
-        - v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-        - v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-
-        - v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-
+        - v{{ .Environment.CI_CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - v{{ .Environment.CI_CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-
+        - v{{ .Environment.CI_CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-
