--- a/.circleci/config/config.yml
+++ b/.circleci/config/config.yml
@@ -23,9 +23,7 @@ orbs:
 working_directory: ~/project
 
 # Global environment variables for all jobs
+# IMPORTANT: Jobs with their own environment: sections override global environment completely (no merging).
+# These variables are only inherited by jobs WITHOUT their own environment: section.
+# For jobs that define environment:, consider using CircleCI Contexts to share variables.
 environment:
-  # Disable Nx daemon to prevent conflicts when jobs run in parallel
-  # The daemon is a global process that can cause race conditions and cache
-  # confusion when multiple jobs try to use it simultaneously
-  NX_DAEMON: false
-  CACHE_VERSION: '0.1'
