refactor: reorganize Packer images and modules structure
- Move systemd service files to respective image directories
- Add Ansible playbooks for provisioning
- Add Grafana dashboards and datasources configuration
- Add Alloy monitoring configuration
- Update docker-compose templates for all services
- Add Packer CLI types and improve packer service

--- a/infra/packer/images/api/playbook.yml
+++ b/infra/packer/images/api/playbook.yml
@@ -47,6 +47,19 @@
     - name: Authenticate with DigitalOcean registry
       command: doctl registry login
 
+    # Copy and enable api-app service
+    - name: Copy api-app systemd service
+      copy:
+        src: 'api-app.service'
+        dest: /etc/systemd/system/api-app.service
+        mode: '0644'
+
+    - name: Enable api-app service
+      systemd:
+        name: api-app
+        enabled: yes
+        daemon_reload: yes
+
     # Clean up temporary files
     - name: Clean temporary files
       file:
