--- a/infra/packer/images/grafana/grafana-app.service
+++ b/infra/packer/images/grafana/grafana-app.service
@@ -1,12 +1,16 @@
 [Unit]
 Description=Grafana and Loki Docker Containers
-After=docker-login.service
+After=docker-login.service docker-watcher.service
+Wants=docker-watcher.service
+ConditionPathExists=/root/docker/docker-compose.yml
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
 WorkingDirectory=/root/docker
 ExecStart=/usr/local/bin/docker-compose up -d
+Restart=on-failure
+RestartSec=30s
 
 [Install]
 WantedBy=multi-user.target
