refactor: rename watcher services to consul-template and simplify Docker service architecture
- Rename docker-watcher.service to docker-consul-template.service
- Rename alloy-watcher.service to alloy-consul-template.service
- Remove redundant individual app services (api-app, grafana-app, etc.)
- docker-consul-template now handles all container lifecycle management
- Add Alloy consul-template configuration for dynamic Loki endpoint discovery
- Store Grafana VPC IP in Consul for Alloy agents to discover
- Add comprehensive documentation explaining consul-template mechanism
- Update all playbooks to remove redundant service installations

This simplifies the architecture by having a single consul-template daemon
manage all Docker containers instead of multiple redundant systemd services.

--- a/infra/packer/images/base/playbook.yml
+++ b/infra/packer/images/base/playbook.yml
@@ -191,10 +191,10 @@
         src: '../../modules/consul-base/consul.service'
         dest: '/etc/systemd/system/consul.service'
 
-    - name: Copy Docker watcher service
+    - name: Copy Docker consul-template service
       copy:
-        src: '../../modules/docker/docker-watcher.service'
-        dest: '/etc/systemd/system/docker-watcher.service'
+        src: '../../modules/docker/docker-consul-template.service'
+        dest: '/etc/systemd/system/docker-consul-template.service'
 
     - name: Copy Alloy service file
       copy:
@@ -229,7 +229,7 @@
         - docker
         - consul
         - docker-login
-        - docker-watcher
+        - docker-consul-template
         - alloy
       loop_control:
         label: '{{ item }}'
